// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms | Card Basic Card 1`] = `
<div
  className="Card__StyledCard-sc-1e5czjc-0 fCiISE"
>
  <div
    className="Cardstories__StyledContent-eexhxe-0 iQbcag"
  >
    A Card as a div containing content
  </div>
</div>
`;

exports[`Storyshots Atoms | Card Card rendered with different html tags 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Section
    </div>
    <div>
      <section
        className="Card__StyledCard-sc-1e5czjc-0 fCiISE"
      >
        <div
          className="Cardstories__StyledContent-eexhxe-0 iQbcag"
        >
          A Card as a section containing content
        </div>
      </section>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Article
    </div>
    <div>
      <article
        className="Card__StyledCard-sc-1e5czjc-0 fCiISE"
      >
        <div
          className="Cardstories__StyledContent-eexhxe-0 iQbcag"
        >
          A Card as a article containing content
        </div>
      </article>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Card Card with colored top bar 1`] = `
<div
  className="Card__StyledCard-sc-1e5czjc-0 wxZda"
>
  <div
    className="Cardstories__StyledContent-eexhxe-0 iQbcag"
  >
    A Card as a div containing content
  </div>
</div>
`;
